--- a/practice2.ipynb
+++ b/practice2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "34d30317-2b94-4a17-ac31-05d0afbb53f3",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e600044f-5046-44e0-beba-239597fc8c0c",
    "metadata": {},
    "outputs": [
@@ -132,19 +132,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "04837802-29c7-48b5-89ce-baa435777481",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(286.5732) tensor(0.7500)\n",
-      "tensor(101.6225) tensor(0.8200)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Getting data\n",
     "training_data = datasets.FashionMNIST(\n",
@@ -165,10 +156,13 @@
     "\n",
     "#defining dataset and dataloader\n",
     "train_ds = TensorDataset(training_data.data.reshape(-1,28*28).float(), training_data.targets)\n",
-    "train_dl = DataLoader(train_ds, batch_size = batch_size, shuffle = True)\n",
-    "\n",
     "valid_ds = TensorDataset(test_data.data.reshape(-1,28*28).float(), test_data.targets)\n",
-    "valid_dl = DataLoader(valid_ds, batch_size = 2*batch_size)\n",
+    "\n",
+    "def get_data(train_ds, valid_ds, bs):\n",
+    "    return (\n",
+    "        DataLoader(train_ds, batch_size=bs, shuffle=True),\n",
+    "        DataLoader(valid_ds, batch_size=bs * 2),\n",
+    "    )\n",
     "\n",
     "class Mnist_Logistic(nn.Module):\n",
     "    def __init__(self):\n",
@@ -186,52 +180,72 @@
     "    model = Mnist_Logistic()\n",
     "    return model, optim.SGD(model.parameters(),lr=lr)\n",
     "\n",
-    "model, opt = get_model()\n",
     "\n",
     "def accuracy(xb, yb):\n",
     "    max_xb = torch.argmax(xb,dim=1)\n",
     "    return (max_xb == yb).float().mean()\n",
     "\n",
-    "loss_batch(\n",
+    "def loss_batch(model, loss_func, xb, yb, opt = None):\n",
+    "    loss = loss_func(model(xb),yb)\n",
     "    \n",
-    "total_epochs = 2\n",
-    "for epoch in range(total_epochs):\n",
-    "    #breaking up training data into batch_size chunks, convert into a vector instead of a matrix, \n",
-    "    #and turn the data into floats instead of integers.\n",
-    "    model.train()\n",
-    "    for xb,yb in train_dl:\n",
-    "        pred = model(xb)\n",
-    "        loss = loss_func(pred,yb)\n",
+    "    if opt is not None:\n",
     "        loss.backward()\n",
-    "        \n",
     "        opt.step()\n",
     "        opt.zero_grad()\n",
-    "    model.eval()\n",
-    "    with torch.no_grad():\n",
-    "        valid_loss = sum(loss_func(model(xb),yb) for xb, yb in valid_dl)/len(valid_dl)\n",
-    "        valid_acc = torch.mean(accuracy(model(xb),yb))\n",
-    "    print(valid_loss, valid_acc)\n",
+    "        \n",
+    "    return loss.item(), len(xb)\n",
+    "\n",
+    "def acc_batch(model, xb, yb):\n",
+    "    acc = accuracy(model(xb),yb)\n",
+    "    return acc, len(xb)\n",
+    "        \n",
+    "def fit(epochs, model, loss_func, opt, train_dl, valid_dl):\n",
+    "    for epoch in range(epochs):\n",
+    "        model.train()\n",
+    "        for xb,yb in train_dl:\n",
+    "            loss_batch(model,loss_func,xb, yb, opt)\n",
+    "            \n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            losses, nums = zip(*[loss_batch(model, loss_func, xb, yb) for xb,yb in valid_dl])\n",
+    "            accs, nums = zip(*[acc_batch(model, xb, yb) for xb,yb in valid_dl])\n",
+    "        val_loss = np.sum(np.multiply(losses,nums))/np.sum(nums)\n",
+    "        val_acc = np.sum(np.multiply(accs,nums))/np.sum(nums)\n",
+    "        \n",
+    "        print(epoch, val_loss,val_acc)\n",
+    "\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "78a6ebed-c8f3-4b9f-981b-1754f9e2ea9a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor(102.0337)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 104.30940696716308 0.7477999973297119\n",
+      "1 80.01938446044922 0.7752000033855438\n",
+      "2 111.76534820556641 0.7363999998569488\n",
+      "3 113.08875564575196 0.7674999988079071\n",
+      "4 121.05397827148437 0.7722999978065491\n",
+      "5 86.86415077209473 0.7899000000953674\n",
+      "6 136.05244064331055 0.7884000015258789\n",
+      "7 82.35311103820801 0.7968000006675721\n",
+      "8 65.5009937286377 0.8271000015735627\n",
+      "9 113.14762939453125 0.7515000021457672\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "total_epochs = 10;\n",
+    "train_dl, valid_dl = get_data(train_ds,valid_ds,batch_size)\n",
+    "model, opt = get_model()\n",
+    "fit(total_epochs, model, loss_func, opt, train_dl, valid_dl)"
+   ]
   },
   {
    "cell_type": "markdown",
